@@ -28,18 +28,21 @@ FileIcon::FileIcon()
 
 }
 
-QIcon FileIcon::iconForFileKind(FileKind kind, bool isReadonly, bool isMain, QIcon::Mode mode, int alpha)
+QIcon FileIcon::iconForFileKind(FileKind kind, bool isReadonly, bool isActive, QIcon::Mode mode, int alpha)
 {
-    QString runMark = isMain ? "-run" : "";
-    if (kind == FileKind::Gms) return Theme::icon(":/img/gams-w"+runMark, mode, alpha);
-    if (kind == FileKind::Gdx) return Theme::icon(":/img/database", mode, alpha);
-    if (kind == FileKind::Ref) return Theme::icon(":/img/ref-file", mode, alpha);
-    if (kind == FileKind::Opt) return Theme::icon(":/img/option-file", mode, alpha);
+    QString runMark = isActive ? "-run" : "";
+    // Efi -> currently default "file-edit"
     if (kind == FileKind::GCon) return Theme::icon(":/img/file-connect", mode, alpha);
+    if (kind == FileKind::Gdx) return Theme::icon(":/img/database", mode, alpha);
+    if (kind == FileKind::Gms) return Theme::icon(":/img/gams-w"+runMark, mode, alpha);
+    // Gsp -> fetched directly
     if (kind == FileKind::Guc) return Theme::icon(":/img/gams-config-file", mode, alpha);
+    if (kind == FileKind::Log) return Theme::icon(":/img/file-alt", mode, alpha);
     if (kind == FileKind::Lst) return Theme::icon(":/img/file-alt", mode, alpha);
     if (kind == FileKind::Lxi) return Theme::icon(":/img/file-alt", mode, alpha);
-    if (kind == FileKind::Log) return Theme::icon(":/img/file-alt", mode, alpha);
+    if (kind == FileKind::Opt) return Theme::icon(":/img/option-file", mode, alpha);
+    if (kind == FileKind::Pf) return Theme::icon(":/img/file-param"+runMark, mode, alpha);
+    if (kind == FileKind::Ref) return Theme::icon(":/img/ref-file", mode, alpha);
     if (kind == FileKind::Txt) return Theme::icon(":/img/file-edit", mode, alpha);
     if (kind == FileKind::TxtRO) return Theme::icon(":/img/file-alt", mode, alpha);
     if (!isReadonly) return Theme::icon(":/img/file-edit", mode, alpha);
