@@ -1,6 +1,8 @@
 Version 1.20.5 *
 ==================
 - Added 'Open Location' and 'Open Terminal' to the context menu of the GAMS-System project.
+- Added mark for active PF file.
+- Fixed icon highlighting for current project.
 - Upgraded to Qt 6.8.3 on all platforms.
 
 Version 1.20.4
